Invoice and customer add sections finished
